# jnigen_app

./: .metadata  LICENSE  README.md  ffigen.yaml  jnigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/jnigen_app_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: jnigen_app.podspec
ios/Classes/: jnigen_app.c
lib/: _init.dart  jnigen_app.dart  jnigen_app_bindings_generated.dart
lib/com/fasterxml/jackson/core/: JsonFactory.dart  JsonParser.dart  JsonToken.dart
src/: CMakeLists.txt  jnigen_app.c
